# ChangeLog for net-mail/archivemail
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/archivemail/ChangeLog,v 1.6 2006/10/10 19:59:24 g2boojum Exp $

*archivemail-0.6.2 (10 Oct 2006)

  10 Oct 2006; Grant Goodyear <g2boojum@gentoo.org> +files/archivemail.1,
  +archivemail-0.6.2.ebuild:
  Version bump.  The setup.py file is quite broken here,
  so I've ignored it.  The new ebuild also satisfies
  bug #146686 (thanks to j.habenicht@gmx.de).

  03 Sep 2004; Tom Martin <slarti@gentoo.org> archivemail-0.6.1-r1.ebuild:
  Marked ~amd64.

*archivemail-0.6.1-r1 (13 Jan 2004)

  13 Jan 2004; Grant Goodyear <g2boojum@hotmail.com>
  archivemail-0.6.1-r1.ebuild:
  Quick patch for python 2.3.

  04 Jun 2003; Jack Morgan <jmorgan@gentoo.org> archivemail-0.6.1.ebuild:
  Added ~sparc keyword

*archivemail-0.6.1 (11 Mar 2003)

  11 Mar 2003; Grant Goodyear <g2boojum@gentoo.org> archivemail-0.6.1.ebuild:
  New package
