@@ -1,9 +1,13 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX archivemail.1 10303 RMD160 916f25e4024fcc561a6f1092aa6a3a9f6eb8c3c0 SHA1 1021ea88eb10593bcd496e5e59846c9dc7f234c2 SHA256 9bc8effd2a9996a5a1b65a28e40d972cd1d00f60df1eff3fd772ff8df2f75494
 MD5 c2bdbeb69996fefe4a1e84944e2978f5 files/archivemail.1 10303
 RMD160 916f25e4024fcc561a6f1092aa6a3a9f6eb8c3c0 files/archivemail.1 10303
 SHA256 9bc8effd2a9996a5a1b65a28e40d972cd1d00f60df1eff3fd772ff8df2f75494 files/archivemail.1 10303
-DIST archivemail-0.6.1.tar.gz 34874
+DIST archivemail-0.6.1.tar.gz 34874 RMD160 a2ac69e628753bd88041c03550860b3300887c82 SHA1 bc39a4192cf6dc375ce6274527a88a88563a3820 SHA256 a2f7fa9cf021ca266850f9ef2700fe7d8d01550f17930f479d17e304b94c610a
 DIST archivemail-0.6.2.tar.gz 34995 RMD160 4bfde1bd9ecd06af4eefec53bae6368e02e27ed8 SHA1 b0deeebefc5e81d1e2013c669ebf63ba9cbe2c3f SHA256 70d44fef33290679b461b5475445ab33e55f8700e1d20d842b861eddb845d359
+DIST archivemail-0.7.0.tar.gz 39820 RMD160 1c8d688a8cf06d30ff4b1d380d8a9cc1576e28dd SHA1 fcba04b7ae748d54b8ebcbecb0aad08c4f58e927 SHA256 955af1b36e5b20a1e2e3026c6aff088e9a0d646bcb2e9a52dd6696a6f78f6790
 EBUILD archivemail-0.6.1-r1.ebuild 836 RMD160 a6ac17295adc1c54574edafac284dfbe742d5fae SHA1 20935c1a807e330bb3b882684b912e5aebcd2044 SHA256 9cfe147e69d3a9a837c71ef3b47b5c62eb3dcfb1fe2e3eb4dd8e7cb7a58b935c
 MD5 160f2c38520ffbd9693d430949d4edb5 archivemail-0.6.1-r1.ebuild 836
 RMD160 a6ac17295adc1c54574edafac284dfbe742d5fae archivemail-0.6.1-r1.ebuild 836
@@ -12,17 +16,31 @@ EBUILD archivemail-0.6.2.ebuild 712 RMD160 b326d24b12650ee516c87d6d4adcaf99573d8
 MD5 c37e1c297bd05c298e81da68714c6c98 archivemail-0.6.2.ebuild 712
 RMD160 b326d24b12650ee516c87d6d4adcaf99573d89a9 archivemail-0.6.2.ebuild 712
 SHA256 aacd0c49e000b97b86b77db79555d7e08dfa3a33ac153ae871d099d2c7e965c2 archivemail-0.6.2.ebuild 712
-MISC ChangeLog 979 RMD160 bd2f7b98b5a52436f92a8d60b20d2519edf44f05 SHA1 548b7e988c204fe35738a9d34692ef92f828a8c9 SHA256 c65c796decca0533c6be18c84a0d8275183038f202ad4b0dab8d826d18f02dba
-MD5 e07a15d60bec335dac731ec2050620c2 ChangeLog 979
-RMD160 bd2f7b98b5a52436f92a8d60b20d2519edf44f05 ChangeLog 979
-SHA256 c65c796decca0533c6be18c84a0d8275183038f202ad4b0dab8d826d18f02dba ChangeLog 979
-MISC metadata.xml 225 RMD160 ac3483d68e92cb16beee7988f212b78ba94bb6af SHA1 f2d9a54498eff0f1d06ef6191652f832983b22a4 SHA256 b745d82a37a83bc996e64dc2579616898317e0192e05047ec68b93a59ffdaa95
-MD5 61e0d05b1306513aede2838fa81b05b5 metadata.xml 225
-RMD160 ac3483d68e92cb16beee7988f212b78ba94bb6af metadata.xml 225
-SHA256 b745d82a37a83bc996e64dc2579616898317e0192e05047ec68b93a59ffdaa95 metadata.xml 225
-MD5 95ba0111b81bfefbcd9e5254e7b8091b files/digest-archivemail-0.6.1-r1 68
-RMD160 4d4ba966d57273ba37e4316cbab32b83b9695b60 files/digest-archivemail-0.6.1-r1 68
-SHA256 773b277989406f4bceb7696a13b867d6c5c92dd5f565e53fa2c2ec90c83ba9a4 files/digest-archivemail-0.6.1-r1 68
+EBUILD archivemail-0.7.0.ebuild 912 RMD160 1b0c57c25a5229a7d69806ee03e6bb57ff09c993 SHA1 a0196dc6e07be8e257fd4ae328a2a485adcc1967 SHA256 0be9aa7f318a8f41a38ca40845000bfb7dc74523b7190a607fc08e0ec729d813
+MD5 f12cfb7d812b7f7b4f4dd2a63eeb1cf0 archivemail-0.7.0.ebuild 912
+RMD160 1b0c57c25a5229a7d69806ee03e6bb57ff09c993 archivemail-0.7.0.ebuild 912
+SHA256 0be9aa7f318a8f41a38ca40845000bfb7dc74523b7190a607fc08e0ec729d813 archivemail-0.7.0.ebuild 912
+MISC ChangeLog 1143 RMD160 48510e522e71fee905868303c427bc9c106e0c2d SHA1 8bd4fb6bfbfa5a87134feeaed35c594336cb7cf6 SHA256 928c68f413a6a399fef29ff9f4f8880bb281965f074a1aca0fc880c2f602e788
+MD5 a1a2e29e9803989635aa23d252d5c02c ChangeLog 1143
+RMD160 48510e522e71fee905868303c427bc9c106e0c2d ChangeLog 1143
+SHA256 928c68f413a6a399fef29ff9f4f8880bb281965f074a1aca0fc880c2f602e788 ChangeLog 1143
+MISC metadata.xml 224 RMD160 956ee5fa42d96fd7d7547d94d784f84733021d9f SHA1 1ec4c59d9ad451e53d2ddc0ecac4f1a8ac900cb1 SHA256 b83252f638aaeb527f09b2a74511a8cc08ef3d68eaaa6ae666d7a6906c476b70
+MD5 c547434f678ee8d60613fcbf7c098e6c metadata.xml 224
+RMD160 956ee5fa42d96fd7d7547d94d784f84733021d9f metadata.xml 224
+SHA256 b83252f638aaeb527f09b2a74511a8cc08ef3d68eaaa6ae666d7a6906c476b70 metadata.xml 224
+MD5 79984373f56923ae10d472f2fee3baf5 files/digest-archivemail-0.6.1-r1 250
+RMD160 6d5f0fea7d37c918a3118450421408d01fefa07f files/digest-archivemail-0.6.1-r1 250
+SHA256 335f7bce80581018ae77d9ec3f7e897ec4b8af49fa98ed4d5d8d86f4b314ef90 files/digest-archivemail-0.6.1-r1 250
 MD5 d064ad4799003644074616ae7a599e30 files/digest-archivemail-0.6.2 250
 RMD160 7b14246ebdd14ad42430ea80bdf0a02db8e8a816 files/digest-archivemail-0.6.2 250
 SHA256 444bf84f70874466646e999f61b5ed95d304aa813acfb11c7c99b5060de7d711 files/digest-archivemail-0.6.2 250
+MD5 f4e1035cf17d0b5572878d9d43e37bb4 files/digest-archivemail-0.7.0 250
+RMD160 24c689016504efa16861e9ab2fd38b9289c2d1d6 files/digest-archivemail-0.7.0 250
+SHA256 d5249a5d543d11365ef60e6274a99c8d75be898efdd31f95831aef48022fd6d6 files/digest-archivemail-0.7.0 250
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.6 (GNU/Linux)
+
+iD8DBQFFfQcoV3J2n04EauwRAsORAJ48i1GPSGlFSy49azxd5Go0qxEZ6gCfT7E3
+7m+C/d7dvyDBI18AW/mdh2s=
+=pf6K
+-----END PGP SIGNATURE-----
