@@ -1,1 +1,3 @@
 MD5 aaf071effc9576cc14f3b0eee1d2321e archivemail-0.6.1.tar.gz 34874
+RMD160 a2ac69e628753bd88041c03550860b3300887c82 archivemail-0.6.1.tar.gz 34874
+SHA256 a2f7fa9cf021ca266850f9ef2700fe7d8d01550f17930f479d17e304b94c610a archivemail-0.6.1.tar.gz 34874
