@@ -1,0 +1,3 @@
+MD5 087c9707daa6bb5c44cd052b6d71ce88 archivemail-0.7.0.tar.gz 39820
+RMD160 1c8d688a8cf06d30ff4b1d380d8a9cc1576e28dd archivemail-0.7.0.tar.gz 39820
+SHA256 955af1b36e5b20a1e2e3026c6aff088e9a0d646bcb2e9a52dd6696a6f78f6790 archivemail-0.7.0.tar.gz 39820
