@@ -3,6 +3,6 @@
 <pkgmetadata>
 <herd>net-mail</herd>
 <maintainer>
-  <email>g2boojum@gentoo.org</email>
+	<email>g2boojum@gentoo.org</email>
 </maintainer>
 </pkgmetadata>
