@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/archivemail
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/archivemail/ChangeLog,v 1.6 2006/10/10 19:59:24 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/archivemail/ChangeLog,v 1.7 2006/12/11 06:22:06 tove Exp $
+
+*archivemail-0.7.0 (11 Dec 2006)
+
+  11 Dec 2006; Torsten Veller <tove@gentoo.org> +archivemail-0.7.0.ebuild:
+  Version bump. Added src_test. It depends on python-2.3.
 
 *archivemail-0.6.2 (10 Oct 2006)
 
